<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielburgnerjr.flipulatorfree.DonateActivity" >

    <LinearLayout
        android:id="@+id/DonateActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtDonate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/donate" />

        <TextView
            android:id="@+id/txtMission"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36sp"
            android:text="@string/mission" />
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:text="@string/donations__google_android_market"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
   	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal"
	        android:paddingTop="5dp" >
	
        <Spinner
            android:id="@+id/spnDonate"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:prompt="@string/txtHowMuch" />

	        
	        <Button
	            android:id="@+id/btnDonateNow"
	            android:layout_width="match_parent"
	            android:layout_height="40sp"
	            android:layout_weight="1"
	            android:text="@string/txtDonateNow"
	            android:background="#690"
                android:textColor="#ffffff" />
	    </LinearLayout>
	    

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/donations__paypal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/donations__paypal_description"
            android:textAppearance="@android:style/TextAppearance.Small" />
 
	    <Button
	        android:id="@+id/btnDonatePaypal"
	        android:layout_width="match_parent"
	        android:layout_height="40sp"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="8dp"
	        android:background="#690"
            android:textColor="#ffffff"
	        android:text="@string/txtDonatePaypal" />
   	    
	</LinearLayout>

</RelativeLayout>