<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielburgnerjr.flipulatorfree.MainActivity" >
    
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_fliplogo" />
    
    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/flipulator_free" />
    
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/btnCalculate"
        android:layout_alignLeft="@+id/btnCalculate"
        android:layout_marginBottom="20dp"
        android:background="#690"
        android:text="@string/aboutflipfree"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/btnUpgrade"
        android:layout_alignLeft="@+id/btnUpgrade"
        android:layout_marginBottom="20dp"
        android:background="#690"
        android:text="@string/calculate"
        android:textColor="#ffffff" />
    
    <Button
        android:id="@+id/btnUpgrade"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/btnDonate"
        android:layout_alignLeft="@+id/btnDonate"
        android:layout_marginBottom="20dp"
        android:background="#690"
        android:text="@string/upgrade"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#690"
        android:text="@string/donate"
        android:textColor="#ffffff" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    
</RelativeLayout>
