<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ResultsActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/address" />

        <EditText
            android:id="@+id/txtStreetAddress"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/citystzip" />

        <EditText
            android:id="@+id/txtCityStZipCode"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/sq_footage" />

        <EditText
            android:id="@+id/txtSq_Ft"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/FMVARV" />

        <EditText
            android:id="@+id/txtFMVARVResult"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/salePrice" />

        <EditText
            android:id="@+id/txtSalePriceResult"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/rehab_budget" />

        <EditText
            android:id="@+id/txtRehabBudgetResult"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/closholdcosts" />

        <EditText
            android:id="@+id/txtClosHoldCosts"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/profit" />

        <EditText
            android:id="@+id/txtProfit"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/roi" />

        <EditText
            android:id="@+id/txtROI"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:text="@string/cashoncash" />

        <EditText
            android:id="@+id/txtCashOnCash"
            android:layout_width="0sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="12sp"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30sp"
        android:orientation="horizontal" >

        <View
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/email"
            android:background="#690"
            android:textColor="#ffffff" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>

</LinearLayout>